--- a/style.css
+++ b/style.css
@@ -1,6 +1,40 @@
 *{ font-size: 11px; text-align: center; }
 a { color: hsl(228, 45%, 44%); }
 
-.container {
+
+body {
     width: 1440px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    min-height: 100vh;
+   }
+
+h1 {
+    
 }
+
+.container {
+    width: 225px;
+    border: red solid 2px;
+    border-radius: 15px;
+    
+    }
+
+.img {
+    width: 95%;
+    margin-top: 5px;
+    margin-right: 5px;
+    margin-left: 5px;
+    border-radius: 10px;
+}
+
+.image-avatar {
+    width: 9%
+}
+
+.eth {
+    display: flex;
+    justify-content: space-evenly;
+}
+
