--- a/style.css
+++ b/style.css
@@ -11,13 +11,20 @@ body {
    }
 
 h1 {
-    
+    text-align: left;
+    padding-left: 0.8em;
 }
 
+
+p {
+    text-align: left;
+    padding-left: 0.8em
+}
 .container {
     width: 225px;
     border: red solid 2px;
     border-radius: 15px;
+    text-align: left;
     
     }
 
@@ -36,5 +43,9 @@ h1 {
 .eth {
     display: flex;
     justify-content: space-evenly;
+    
 }
 
+.value {
+    text-align: left;
+}
