--- a/style.css
+++ b/style.css
@@ -1,3 +1,5 @@
+@import url('https://fonts.googleapis.com/css2?family=Outfit:wght@300;400;600&display=swap');
+
 *{ font-size: 11px; text-align: center; }
 a { color: hsl(228, 45%, 44%); }
 
@@ -8,6 +10,7 @@ body {
     justify-content: center;
     align-items: center;
     min-height: 100vh;
+    font-family: 'Outfit', sans-serif;
    }
 
 h1 {
@@ -25,6 +28,7 @@ p {
     border: red solid 2px;
     border-radius: 15px;
     text-align: left;
+    box-shadow: 0 0 20px 15px black, 0 0 30px 30px orange;
     
     }
 
@@ -42,6 +46,7 @@ p {
 
 .eth {
     display: flex;
+    
 }
 
 .days {
@@ -53,4 +58,22 @@ p {
     display: flex;
     padding-left: 1em;
     margin-bottom: 4px;
+}
+
+.eth-icon {
+    width: 8px;
+    height: 20px;
+}
+
+.days-icon {
+    width: 8px;
+    height: 20px;
+}
+
+.value {
+    font-weight: 600;
+}
+
+.author {
+    font-size: 400;
 }
