--- a/style.css
+++ b/style.css
@@ -5,7 +5,7 @@ a { color: hsl(228, 45%, 44%); }
 
 
 body {
-    width: 1440px;
+    max-width: 1440px;
     display: flex;
     justify-content: center;
     align-items: center;
@@ -25,8 +25,8 @@ p {
     text-align: left;
     padding-left: 0.8em;
     color: hsl(228, 45%, 44%); }
-    ;
-    }
+    
+    
 
 .container {
     width: 225px;
