--- a/style.css
+++ b/style.css
@@ -42,15 +42,33 @@ p {
     
     }
 
-.img {
+.top {
+    border-radius: 12px;
+    overflow: hidden;
+    position: relative;
+
+}
+
+.top .img {
+    width: 100%;
+    display: block;
+}
+
+/* .img {
     width: 95%;
     margin-top: 5px;
     margin-right: 5px;
     margin-left: 5px;
     border-radius: 10px;
+    display: block;
+} */
+
+.image-overlay {
+
 }
 
-    /* .img {
+
+/* .img {
         border-radius: 10px;
         overflow: hidden;
         position: relative;
