--- a/style.css
+++ b/style.css
@@ -20,7 +20,9 @@ body {
 h1 {
     text-align: left;
     padding-left: 0.8em;
-    color: hsl(0, 0%, 100%)
+    color: hsl(0, 0%, 100%);
+    font-weight: 600;
+    font-size: 15px;
 }
 
 
@@ -42,28 +44,32 @@ p {
     
     }
 
-.top {
+/* .top {
     border-radius: 12px;
     overflow: hidden;
     position: relative;
 
-}
+} */
 
-.top .img {
+/* .top .img {
     width: 100%;
     display: block;
-}
+} */
 
-/* .img {
+.img {
     width: 95%;
     margin-top: 5px;
     margin-right: 5px;
     margin-left: 5px;
     border-radius: 10px;
-    display: block;
-} */
+    /* display: block; */
+}
 
-.image-overlay {
+/* .image-overlay {
+    position: absolute;
+    width: 50px;
+    top: 50%;
+    left: 50%; */
 
 }
 
@@ -83,13 +89,22 @@ p {
     background-color: hsl(178, 100%, 50%);
 } */
 
-.image-avatar {
-    width: 8%;
-}
+ /* {
+    width: 4%;
+} */
 
-.eth {
+/* .eth {
+    /* display: flex; */
+    /* align-items: center;
+    justify-content: center; */
+ .eth {
     display: flex;
-    
+    align-items: center;
+    justify-content: center;
+ }
+
+hr {
+    border-color: hsl(215, 32%, 27%);
 }
 
 .days {
@@ -99,19 +114,20 @@ p {
 
 .creator {
     display: flex;
+    align-items: center;
     padding-left: 1em;
     margin-bottom: 4px;
 }
 
-.eth-icon {
+/* .eth-icon {
     width: 8px;
     height: 20px;
-}
+} */
 
-.days-icon {
+/* .days-icon {
     width: 8px;
     height: 20px;
-}
+} */
 
 .value {
     font-weight: 600;
